--- a/vignettes/TechLeaders.Rmd
+++ b/vignettes/TechLeaders.Rmd
@@ -97,21 +97,24 @@ We want multiple annotations on this plot:
 
 ```{r NLD_SGP1}
 x0 <- yr(c('1642-01-04', '1702-03-08', '1812-06-18', '1861-04-12', 
-           '1914-07-28', '1929-03-04', '1933-03-04', '1939-09-01')) 
+           '1914-07-28', '1929-03-04', '1933-03-04', '1939-09-01', 
+           '1981-01-20', '2017-01-20', '2021-01-20')) 
 x1 <- yr(c('1651-09-03', '1714-08-01', '1815-02-17', '1865-05-26', 
-           '1918-11-11', '1933-03-04', '1945-04-12', '1945-09-02'))
+           '1918-11-11', '1933-03-04', '1945-04-12', '1945-09-02', 
+           '1989-01-20', '2021-01-20', '2025-01-20'))
 Vlines <- sort(unique(c(x0, x1)))
 attr(Vlines, 'color') <- c(rep('grey', 10), 'red', 'green4', 'grey', 
-                           'green4', 'grey')
+                           'green4', rep('grey', 6))
 Hlines = c(1, 3, 5, 10, 30, 50)
 Lbls <- data.frame(x=c(1500, 1600, 1740, 1870, (x0+x1)/2, 1985), 
-                   y=c(1.35,  5.7, 1.65,  3.5, 13, rep(15, 4), 36, 21, 64, 8), 
+                   y=c(1.35,  5.7, 1.65,  3.5, 13, rep(15, 4), 36, 21, 64, 
+                       1.6, 2.5, 16, 8), 
     label=c('UK', 'Holland', 'US', 'Netherlands', 'English civil war', 
             'Queen Ann', 'War of 1812', 'American Civil War', 'WW1', 'Hoover',
-            'FDR', 'WW2', 'Singapore'), 
-    srt=c(0, 0, 40, 50, rep(90, 8), 87), 
+            'FDR', 'WW2', 'Reagan', 'Trump45', 'Biden', 'Singapore'), 
+    srt=c(0, 0, 40, 50, rep(90, 11), 87), 
     col=c('red', 'orange', 'blue', 'orange', 'red', rep('grey', 4), 'red',
-          'green4', 'grey', 'darkolivegreen4') )
+          'green4', rep('grey', 4), 'darkolivegreen4') )
 
 (NLD_SGP1 <- ggplotPath(y='gdppc', group='ISO', data=NLD_SGP, scaley=1000, 
                         ylab='GDP per capita (2011 K$ PPP)', 
@@ -119,14 +122,12 @@ Lbls <- data.frame(x=c(1500, 1600, 1740, 1870, (x0+x1)/2, 1985),
                         fontsize=20, 
                         color=c('red', 'orange', 'darkolivegreen4', 'blue'), 
                         linetype=c(1:2, 1, 1)))
-
-
 ```
 
 Save.
 
 ```{r NLD_SGP1s, eval=FALSE}
-svg('NLD_SGP.svg')
+svg('NLD_SGP2.svg')
 NLD_SGP1 
 dev.off()
 ```
