--- a/vignettes/IndustrialRevolution.Rmd
+++ b/vignettes/IndustrialRevolution.Rmd
@@ -6,7 +6,7 @@ output: rmarkdown::html_vignette
 #output: rmarkdown::word_document
 # output: word_document
 vignette: >
-  %\VignetteIndexEntry{IndustrialRevolution}
+  %\VignetteIndexEntry{Industrial Revolution began in 1689 or 1649?}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
