add to MaddisonData.bib

--- a/vignettes/MaddisonData.bib
+++ b/vignettes/MaddisonData.bib
@@ -737,6 +737,15 @@ volume = 26,
 pages = "972--981",
 }
 
+@book{White57,
+author = "Reginald J. White",
+year = 1957,
+title = "Waterloo to Peterloo",
+publisher = "William Heinemann Ltd",
+note = "cited from the Wikipedia article on 'Peterloo Massacre. 
+  \url{https://en.wikipedia.org/wiki/Peterloo_Massacre}, accessed 2026-02-05", 
+}
+
 @article{WrightWegman80,
 author = "Wright, I. and Wegman, E.",
 year = 1980,
